--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  margin: 42px 35% 0 30px;
+  margin: 0 35% 0 0;
   nav {
     margin-left: 86px;
     line-height: 50px;
@@ -8,7 +8,6 @@
   &__liste {
     display: flex;
     flex-wrap: wrap;
-    list-style-type: none;
     a {
       @include tags;
     }
