--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,7 @@
 * {
   font-family: 'DM Sans', sans-serif;
   box-sizing: border-box;
+  font-weight: normal;
 }
 
 body {
@@ -13,7 +14,11 @@ a {
   text-decoration: none;
 }
 
-h1, h2, ul, p {
+h1, h2, ul, p, figure, button {
   padding: 0;
   margin: 0;
+}
+
+ul {
+  list-style-type: none;
 }
