--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,10 +4,16 @@
   nav {
     margin-left: 86px;
     line-height: 50px;
+    @include tab-max {
+      width: 90%;
+      margin: 18px auto 50px auto;
+      line-height: 25px;
+    }
   }
   &__liste {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     a {
       @include tags;
     }
