--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -1,16 +1,46 @@
+.header {
+  @include tab-max {
+    flex-direction: column;
+    margin: 0;
+  }
+  svg {
+    @include mob-max {
+      width: 150px;
+    }
+  }
+}
+
 .acc-main {
   margin: 110px 0 0 -30px;
+  @include tab-max {
+    margin: 0;
+  }
   > h1 {
     position: absolute;
     top: 44px;
     right: 5%;
     font-size: 2.25em;
     color: $clr-primaire;
+    @include tab-max {
+      font-size: 1.8em;
+    }
+    @include mob-max {
+      font-size: 0.875em;
+      top: 58px;
+      right: 7%;
+    }
   }
   > section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 10%;
+    @include mob-max {
+      flex-direction: column;
+    }
+    @include tab-max {
+      gap: 2%;
+    }
   }
 }
+
